Fixed display on mobile

--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,27 @@ body {
     color: white;
 }
 
+#content {
+    text-align: center;
+}
+
 #header {
     color: white;
     font-size: 42px;
     font-weight: bold;
-    margin: 40px auto;
     text-align: center;
+    padding: 20px 10px 40px 10px;
+}
+
+#instructions {
+    padding: 10px;
 }
 
 #board {
     display: grid;
-    width: 440px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px 10px;
-    margin: 0 auto;
+    grid-template-columns: repeat(4, 80px);
+    grid-gap: 10px;
+    justify-content: center;
 }    
 
 .tile {
@@ -24,11 +31,11 @@ body {
     font-size: 36px;
     font-weight: bold;
     border: 1px solid gray;
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
     text-align: center;
     text-transform: uppercase;
-    line-height: 100px;
+    line-height: 80px;
 }
 
 .filled {
